# aws-cost-notifier-for-discord

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/transition/: _latest.md  handover-20250830-1803-main.md  handover-20250830-2355-main.md  handover-20250901-2335-main.md  handover-20250902-0945-main.md  handover-20250902-2134-main.md
.github/: README.md
lambda/: lambda_function.py
terraform/: .terraform.lock.hcl  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
